--- a/gcp.api.py.01.ipynb
+++ b/gcp.api.py.01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "54eeaeb2",
    "metadata": {},
    "outputs": [],
@@ -13,47 +13,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "b196cf8d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the Google Cloud client library\n",
-    "from google.cloud import vision"
+    "from google.cloud import vision\n",
+    "from google.cloud.vision import ImageAnnotatorClient"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "83a1673a",
    "metadata": {},
    "outputs": [],
    "source": [
     "GOOGLE_CLOUD_PROJECT=\"tutorialprj01\"\n",
-    "GOOGLE_APPLICATION_CREDENTIALS=\".//key.gcp.json\""
+    "GOOGLE_APPLICATION_CREDENTIALS=\"./key.gcp.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "5f98ebee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The project ID is: tutorialprj01\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('The project ID is: {0}'.format(PROJECT_ID))"
+    "print('The project ID is: {0}'.format(GOOGLE_CLOUD_PROJECT))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "2ab9a734",
    "metadata": {},
    "outputs": [],
@@ -64,41 +57,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "617d0560",
+   "execution_count": null,
+   "id": "8077fb21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ['http_proxy']=r\"http://localhost:10809\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62b15ef7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiates a client\n",
-    "client = vision.ImageAnnotatorClient()\n"
+    "client = vision.ImageAnnotatorClient()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "470cec50",
+   "execution_count": null,
+   "id": "37e85b21",
    "metadata": {},
    "outputs": [],
    "source": [
     "# The name of the image file to annotate\n",
-    "file_name = os.path.abspath('.//img//brenchmarking.01.png')\n"
+    "file_name = os.path.abspath('./img/brenchmarking.01.png')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "919796a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Locads the imag into memory\n",
     "with io.open(file_name, 'rb') as image_file:\n",
-    "    content = image_file.read()"
+    "    content = image_file.read()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "8490dfa6",
    "metadata": {},
    "outputs": [],
@@ -108,52 +111,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "4861e618",
+   "execution_count": null,
+   "id": "324a1ca1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'google.cloud.vision' has no attribute 'Image'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [66]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m image \u001b[38;5;241m=\u001b[39m \u001b[43mvision\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mImage\u001b[49m()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'google.cloud.vision' has no attribute 'Image'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "image = vision.Image()"
+    "image = vision.Image(content=content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "324a1ca1",
+   "execution_count": null,
+   "id": "700c7655",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'google.cloud.vision' has no attribute 'Image'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [58]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m image \u001b[38;5;241m=\u001b[39m \u001b[43mvision\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mImage\u001b[49m(content \u001b[38;5;241m=\u001b[39m content)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'google.cloud.vision' has no attribute 'Image'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "image = vision.Image(content = content)"
+    "# Performs label detection on the image file\n",
+    "response = client.text_detection(image=image)\n",
+    "labels = response.label_annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00ef81ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = response.text_annotations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "12558c2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "print('Labels (and confidence score):')\n",
+    "print('=' * 30)\n",
+    "for label in labels:\n",
+    "    print(label.description, '(%.2f%%)' % (label.score*100.))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a6afe1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for text in texts:\n",
+    "    print(text.description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a879de7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77022bdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "752dc22e",
    "metadata": {},
    "outputs": [],
    "source": []
